--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
           cache: 'npm'
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm i -g npm@9
+      - run: npm ci
 
       - name: Lint
         run: npm run lint
@@ -46,8 +46,8 @@ jobs:
           cache: 'npm'
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm i -g npm@9
+      - run: npm ci
 
       - name: Test
         uses: percy/exec-action@v0.3.1
@@ -71,8 +71,8 @@ jobs:
           cache: 'npm'
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm i -g npm@9
+      - run: npm ci
 
       - name: Test
         run: npm run test:node
